--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,16 @@ name = "pine"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "pine"
+test = false
+bench = false
+
+[[bin]]
+name = "pvm"
+test = false
+bench = false
+
 [dependencies]
 ast = { path = "./ast" }
 gen = { path = "./gen" }
