--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["ast", "gen", "pvm", "tests_proc_macros"]
+members = ["ast", "ast/ast_proc_macros", "gen", "pvm", "tests_proc_macros"]
 
 [package]
 name = "pine"
