--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["ast", "ast/ast_proc_macros", "gen", "pvm", "tests_proc_macros"]
+members = ["ast", "ast/ast_proc_macros", "gen", "pvm", "test_util", "test_util/test_util_proc_macros"]
 
 [package]
 name = "pine"
@@ -22,5 +22,3 @@ ast = { path = "./ast" }
 gen = { path = "./gen" }
 pvm = { path = "./pvm" }
 
-[dev-dependencies]
-tests_proc_macros = { path = "./tests_proc_macros" }
