moved sem to seperate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "gen",
     "pvm",
     "pvm/pvm_proc_macros",
+    "sem",
     "test_util",
     "test_util/test_util_proc_macros"
 ]
@@ -27,6 +28,7 @@ bench = false
 
 [dependencies]
 ast = { path = "./ast" }
+sem = { path = "./sem" }
 gen = { path = "./gen" }
 pvm = { path = "./pvm" }
 
